# chatbot_DHR_IT_Division

./: README.md  app.py  create_database.py  pyproject.toml  query_data.py
chroma/: chroma.sqlite3
documents/: README.md  book.md
templates/: index.html
